# news-aggregator

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
dags/: 01_hello_airflow.py  02_python_operators.py  03_taskflow_api.py  04_branching_sensors.py  05_nytimes_aggregator.py
docs/: LLM_INTEGRATION_GUIDE.md
include/: __init__.py  email_client.py  llm_client.py  nytimes_client.py
scripts/: read_news.py  start_airflow.sh  test_llm.py  test_nytimes.py
src/news_aggregator/: __init__.py
src/news_aggregator/cli/: read_news.py
src/news_aggregator/clients/: llm_client.py  nyt_client.py
src/news_aggregator/email/: sender.py
src/news_aggregator/models/: article.py
tests/: conftest.py  test_article_model.py  test_cli_read_news.py  test_email_sender.py  test_llm_client.py  test_nyt_client.py
